pre-release tweaks and bugfixes - invalid mc versions no longer default - dynamic common module detection - prefer Strings to GStrings - move dev environment optimization mods to project buildscripts - build number is included in mod version - intellij project name and icon added to git - update discord invite - better jvm args for SPEEEEEEED